--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "cripto",
+  "name": "crypto-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "API para cifrado asimétrico, simétrico y hash",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
+    "ecdsa": "^0.0.4",
+    "express": "^4.18.2"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.21.0"
-  }
+  "license": "ISC"
 }
-
