--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
-    "elliptic": "^6.5.4",  // Usar elliptic para ECC
+    "elliptic": "^6.5.4",  
     "express": "^4.18.2"
   },
   "keywords": [],
